--- a/server/front/pod.html
+++ b/server/front/pod.html
@@ -14,7 +14,7 @@
             <button name="submit">Send</button>
         </form>
         <hr>
-        <ul id="message"></ul>
+        <ul id="timeline"></ul>
     </div>
     <script src="/static/js/socket_talk.js" type="text/javascript"></script>
 </body>
