--- a/front/pod.html
+++ b/front/pod.html
@@ -8,6 +8,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 </head>
 <body>
+    <div class="login">
+        <form name="login">
+            <input type="text" name="name" placeholder="Set own name">
+            <input type="text" name="password" placeholder="Password">
+            <button name="submit">Join Pod</button>
+        </form>
+    </div>
     <div>
         <form name="chat">
             <input type="text" name="content">
