add: when login in success, hide loginform

--- a/front/pod.html
+++ b/front/pod.html
@@ -14,6 +14,7 @@
             <input type="text" name="password" placeholder="Password">
             <button name="submit">Join Pod</button>
         </form>
+        <p id='login_message'></p>
     </div>
     <div>
         <form name="chat">
