--- a/front/pod.html
+++ b/front/pod.html
@@ -60,8 +60,10 @@
             </div>
         </div>
     </div>
+    <!-- babel -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <!-- chat script -->
-    <script src="/static/js/socket_talk.js" type="text/javascript"></script>
+    <script src="/static/js/socket_talk.js" type="text/babel"></script>
 
     <!-- bootstrap -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
