--- a/front/index.html
+++ b/front/index.html
@@ -4,55 +4,77 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Home - Brand</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <title>OPodS</title>
+    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
 </head>
 
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg fixed-top" id="mainNav">
-        <div class="container"><a class="navbar-brand js-scroll-trigger" href="#">OpodS</a><button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
-                value="Menu"><i class="fa fa-bars"></i></button>
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="#">OpodS</a>
+            <button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive"
+                type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
+                value="Menu">
+                <i class="fa fa-bars"></i>
+            </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link active js-scroll-trigger" href="#about">Create pod</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link js-scroll-trigger" href="/pods/">Join pod</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a class="nav-link js-scroll-trigger" href="#github">Github</a></li>
-                    <li class="nav-item nav-link js-scroll-trigger" role="presentation"></li>
+                    <li class="nav-item nav-link js-scroll-trigger" role="presentation">
+                        <a class="nav-link active js-scroll-trigger" href="#create">Create Pod</a>
+                    </li>
+                    <li class="nav-item nav-link js-scroll-trigger" role="presentation">
+                        <a class="nav-link js-scroll-trigger" href="/pods/">Join Pod</a>
+                        </li>
+                    <li class="nav-item nav-link js-scroll-trigger" role="presentation">
+                        <a class="nav-link js-scroll-trigger" href="#github">Github</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image: url(&quot;assets/img/safe.jpg&quot;);">
+    <header class="masthead" style="background-image: url(&quot;/static/img/safe.jpg&quot;);">
         <div class="intro-body">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="brand-heading" style="background-color: #171717;">Talk.</h1>
-                        <h1 class="brand-heading" style="background-color: #171717;">in secure pod.</h1>
-                        <p class="intro-text">OPodS makes private chat space as pod.</p><a class="btn btn-link btn-circle" role="button" href="#about"><i class="fa fa-angle-double-down animated"></i></a></div>
+                        <h1 class="brand-heading">Talk.</h1>
+                        <h1 class="brand-heading">in secure pod.</h1>
+                        <p class="intro-text">OPodS makes private chat space as pod.</p><a
+                            class="btn btn-link btn-circle" role="button" href="#create"><i
+                                class="fa fa-angle-double-down animated"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
     </header>
-    <section id="about" class="content-section text-center">
+    <section id="create" class="content-section text-center">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
                     <h2>Create Pod</h2>
-                    <p>Grayscale is a free Bootstrap theme. It can be yours right now, simply download the template on&nbsp;<a href="#">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                    <form name="create_pod">
+                        <input type="text" name="pod_id" placeholder="pod id">
+                        <input type="text" name="password" placeholder="password">
+                        <button name="submit">Create</button>
+                        <p id="result"></p>
+                    </form>
                 </div>
             </div>
         </div>
     </section>
-    <section id="github" class="download-section content-section text-center" style="background-image:url('assets/img/downloads-bg.jpg');">
+    <section id="github" class="download-section content-section text-center"
+        style="background-image:url('/static/img/downloads-bg.jpg');">
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h1>self hosting</h1>
-                <p>You can download OPodS Server for free and host.</p><button class="btn btn-primary btn-lg btn-default" type="button">visit github</button></div>
+                <p>You can download OPodS Server for free and host.</p><button
+                    class="btn btn-primary btn-lg btn-default" type="button">visit github</button>
+            </div>
         </div>
     </section>
     <div class="map-clean"></div>
@@ -64,7 +86,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <script src="assets/js/grayscale.js"></script>
+    <script src="/static/js/grayscale.js"></script>
+    <script src="/static/js/create_pod.js"></script>
 </body>
 
 </html>
