--- a/front/index.html
+++ b/front/index.html
@@ -83,11 +83,13 @@
             <p>Copyright © OPodS 2019</p>
         </div>
     </footer>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="/static/js/grayscale.js"></script>
-    <script src="/static/js/create_pod.js"></script>
+    <script src="/static/js/create_pod.js" type="text/babel"></script>
 </body>
 
 </html>
