--- a/front/index.html
+++ b/front/index.html
@@ -31,7 +31,7 @@
                         <a class="nav-link js-scroll-trigger" href="/pods/">Join Pod</a>
                         </li>
                     <li class="nav-item nav-link js-scroll-trigger" role="presentation">
-                        <a class="nav-link js-scroll-trigger" href="#github">Github</a>
+                        <a class="nav-link js-scroll-trigger" href="https://github.com/kekeho/opods">Github</a>
                     </li>
                 </ul>
             </div>
@@ -72,8 +72,8 @@
         <div class="container">
             <div class="col-lg-8 mx-auto">
                 <h1>self hosting</h1>
-                <p>You can download OPodS Server for free and host.</p><button
-                    class="btn btn-primary btn-lg btn-default" type="button">visit github</button>
+                <p>You can download OPodS Server and host it.</p>
+                <a class="btn btn-primary btn-lg btn-default" href="https://github.com/kekeho/opods/">Visit github</a>
             </div>
         </div>
     </section>
