--- a/front/pod.html
+++ b/front/pod.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-light navbar-expand-md navbar navbar-expand-lg navbar-black" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#">OPodS</a>
+            <a class="navbar-brand js-scroll-trigger" href="/">OPodS</a>
             <button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive"
                 type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
                 value="Menu">
@@ -29,9 +29,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a
-                            class="nav-link active js-scroll-trigger" href="#about">Create New pod</a></li>
+                            class="nav-link active js-scroll-trigger" href="/#create">Create New Pod</a></li>
                     <li class="nav-item nav-link js-scroll-trigger" role="presentation"><a
-                            class="nav-link js-scroll-trigger" href="#github">Github</a></li>
+                            class="nav-link js-scroll-trigger" href="https://github.com/kekeho/OPodS">Github</a></li>
                     <li class="nav-item nav-link js-scroll-trigger" role="presentation"></li>
                 </ul>
             </div>
